--- a/mobile.html
+++ b/mobile.html
@@ -76,6 +76,10 @@
             min-height: 40px;
             font-size: 12px;
             position: relative;
+            cursor: pointer;
+        }
+        .calendar-day:hover {
+            background-color: #e9e9e9;
         }
         .date {
             font-weight: bold;
@@ -301,6 +305,15 @@
             countEl.className = 'booking-count';
             countEl.textContent = guestsForDay.length > 0 ? guestsForDay.length : '';
             dayEl.appendChild(countEl);
+
+            if (!showDetails) {
+                dayEl.addEventListener('click', () => {
+                    currentDate = new Date(date);
+                    currentView = 'day';
+                    document.getElementById('viewSelect').value = 'day';
+                    renderCalendar();
+                });
+            }
 
             return dayEl;
         }
