remove the word booking

--- a/mobile.html
+++ b/mobile.html
@@ -149,14 +149,14 @@
     <div class="container">
         <div class="welcome-message">STAY IN <span>BERN</span></div>
         <div class="form-container">
-            <h2>Book a Stay</h2>
+            <h2>When are you staying?</h2>
             <div class="form">
                 <input type="text" id="newGuestName" placeholder="Your Name">
                 <div class="date-range">
                     <input type="date" id="bookStartDate">
                     <input type="date" id="bookEndDate">
                 </div>
-                <button id="bookStayBtn" class="button">Book Stay</button>
+                <button id="bookStayBtn" class="button">Save</button>
             </div>
         </div>
         <div class="controls">
