--- a/sleeping.html
+++ b/sleeping.html
@@ -119,12 +119,12 @@
 <body>
     <div class="welcome-message">CHAGAI IS WAITING FOR YOU!</div>
     <div class="form-container">
-        <h2>Book a Stay</h2>
+        <h2>When are you staying?</h2>
         <div class="form">
             <input type="text" id="newGuestName" placeholder="Your Name">
             <input type="date" id="bookStartDate">
             <input type="date" id="bookEndDate">
-            <button id="bookStayBtn" class="button">Book Stay</button>
+            <button id="bookStayBtn" class="button">Save</button>
         </div>
     </div>
     <div class="controls">
