--- a/sleeping.html
+++ b/sleeping.html
@@ -254,13 +254,13 @@
         CHAGAI IS WAITING FOR YOU!
     </div>
     <div class="form-container">
-        <h2><i class="far fa-calendar-alt"></i> Plan Your Stay</h2>
+        <h2><i class="far fa-calendar-alt"></i> When are you staying?</h2>
         <div class="form">
             <input type="text" id="newGuestName" placeholder="Your Name">
             <input type="date" id="bookStartDate">
             <input type="date" id="bookEndDate">
             <button id="bookStayBtn" class="button">
-                <i class="fas fa-check"></i> Book Now
+                <i class="fas fa-check"></i> Save
             </button>
         </div>
     </div>
