--- a/mobile.html
+++ b/mobile.html
@@ -39,46 +39,15 @@
         </div>
     </div>
     <script type="module">
-        import { days, getGuestsForDay } from './booking-system.js';
-        
+        import { bookings, days, getGuestsForDay, bookStay, updateStay } from './booking-system.js';
+
         let currentDate = new Date();
-        let bookings = [];
 
         const colors = [
             '#AED6F1', '#F5B7B1', '#A9DFBF', '#FAD7A0', '#D2B4DE',
             '#A3E4D7', '#F9E79F', '#D5DBDB', '#ABEBC6', '#F5CBA7',
             '#AEB6BF', '#FADBD8', '#D1F2EB', '#FCF3CF', '#D6EAF8'
         ];
-
-        function bookStay(name, startDate, endDate) {
-            const start = new Date(startDate);
-            const end = new Date(endDate);
-            if (start > end) {
-                throw new Error("End date must be after start date");
-            }
-            const color = colors[bookings.length % colors.length];
-            bookings.push({ name, startDate: start, endDate: end, color });
-        }
-
-        function updateStay(name, newStartDate, newEndDate) {
-            const bookingIndex = bookings.findIndex(booking => booking.name === name);
-            if (bookingIndex === -1) {
-                throw new Error("Booking not found");
-            }
-            const start = new Date(newStartDate);
-            const end = new Date(newEndDate);
-            if (start > end) {
-                throw new Error("End date must be after start date");
-            }
-            bookings[bookingIndex].startDate = start;
-            bookings[bookingIndex].endDate = end;
-        }
-
-        function getGuestsForDay(date) {
-            return bookings.filter(booking => 
-                date >= booking.startDate && date <= booking.endDate
-            );
-        }
 
         function renderCalendar() {
             const containerEl = document.getElementById('calendarContainer');
@@ -114,7 +83,7 @@
                     const guestEl = document.createElement('div');
                     guestEl.className = 'guest';
                     guestEl.textContent = guest.name;
-                    guestEl.style.backgroundColor = guest.color;
+                    guestEl.style.backgroundColor = colors[index % colors.length];
                     dayEl.appendChild(guestEl);
                 });
                 gridEl.appendChild(dayEl);
